# rpc

./: CMakeLists.txt  README.md
include/: math_ops.h
src/: CMakeLists.txt  NamedParmRPCTest  NamedParmRPCTest.cpp  a.out  main.cpp  math_ops.cpp  rpc_provider.cpp  rpc_server.cpp  rpc_server.hpp  serialization.hpp  test  test.cpp  test2  test2.cpp  test2_optimized  test_named_params.cpp  test_serialization  test_serialization.cpp
test/: CMakeLists.txt  performance_test.cpp  test_main.cpp
